k8s/dev/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: todo-app-ingress
  namespace: todo-app

spec:
  ingressClassName: nginx

  rules:
    - host: todo-app.local
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 80
